Fix monospace on mobiles

--- a/map_v1.css
+++ b/map_v1.css
@@ -26,6 +26,12 @@ pre, *[xxsmall], *[xxxsmall] {
   letter-spacing: -1.0px;
   /* text-shadow: 0px 0px 1px #555; */
 }
+
+/* REF: http://code.iamkate.com/html-and-css/fixing-browsers-broken-monospace-font-handling/ */
+pre, code, kbd, samp, tt{
+  font-family:monospace,monospace;
+  font-size:1em;
+}
 *[xxxsmall] pre  { outline: 0px; }
 pre > b { /* text-shadow: 0px 0px 1px #BBB; */ }
 
